SERVER-10995 Leave CurOp::_start untouched when setting maxTimeMS