src/mongo/db/curop.cpp
@@ -74,6 +74,7 @@ namespace mongo {
         _command = false;
         _dbprofile = 0;
         _end = 0;
+        _maxTimeMicros = 0;
         _maxTimeTracker.reset();
         _message = "";
         _progressMeter.finished();
@@ -176,8 +177,16 @@ namespace mongo {
 
 
     void CurOp::ensureStarted() {
-        if ( _start == 0 )
+        if ( _start == 0 ) {
             _start = curTimeMicros64();
+
+            // If ensureStarted() is invoked after setMaxTimeMicros(), then time limit tracking will
+            // start here.  This is because time limit tracking can only commence after the
+            // operation is assigned a start time.
+            if (_maxTimeMicros > 0) {
+                _maxTimeTracker.setTimeLimit(_start, _maxTimeMicros);
+            }
+        }
     }
 
     void CurOp::enter( Client::Context * context ) {
@@ -289,20 +298,27 @@ namespace mongo {
     }
 
     void CurOp::setMaxTimeMicros(uint64_t maxTimeMicros) {
-        if (maxTimeMicros == 0) {
+        _maxTimeMicros = maxTimeMicros;
+
+        if (_maxTimeMicros == 0) {
             // 0 is "allow to run indefinitely".
             return;
         }
 
-        // Note that calling startTime() will set CurOp::_start if it hasn't been set yet.
-        _maxTimeTracker.setTimeLimit(startTime(), maxTimeMicros);
+        // If the operation has a start time, then enable the tracker.
+        //
+        // If the operation has no start time yet, then ensureStarted() will take responsibility for
+        // enabling the tracker.
+        if (isStarted()) {
+            _maxTimeTracker.setTimeLimit(startTime(), _maxTimeMicros);
+        }
     }
 
     bool CurOp::maxTimeHasExpired() {
         if (MONGO_FAIL_POINT(maxTimeNeverTimeOut)) {
             return false;
         }
-        if (_maxTimeTracker.isEnabled() && MONGO_FAIL_POINT(maxTimeAlwaysTimeOut)) {
+        if (_maxTimeMicros > 0 && MONGO_FAIL_POINT(maxTimeAlwaysTimeOut)) {
             return true;
         }
         return _maxTimeTracker.checkTimeLimit();
